# gig-work-invoicing

./: .gitignore  Keikkatyölaskutusjärjestelmä kuvaus.docx  README.md  assets  main.py  manage.py  package-lock.json  pyproject.toml  testia.py
backend/: .env  .gitignore  Readme.md  db.sqlite3  db_lilii.sqbpro  email_settings.env  manage.py  pyproject.toml
backend/GigBillingSystem/: asgi.py  models.py  settings.py  urls.py  wsgi.py
backend/gbsapp/: admin.py  apps.py  forms.py  models.py  services.py  views.py
backend/gbsapp/data_loading/: fixtures.txt
backend/gbsapp/migrations/: 0001_initial.py  0002_billingcase_vat_includes_payroll_customer_role_and_more.py  0003_alter_billingcase_vat_percent.py  0004_alter_billingcase_vat_percent.py  0005_alter_billingcase_vat_percent.py  0006_alter_billingcase_stage.py  0007_rename_billigcustomers_billingcustomers.py  0008_alter_billingcase_billing_cust_id_and_more.py  0009_alter_invoice_billing_cust_id.py  0010_alter_documents_user_id.py
backend/gbsapp/services/: customer_info.py  email_service.py  make_invoice.py  services.py
backend/gbsapp/templates/: laskutus.htm
backend/gbsapp/templates/gbsapp/: base.html  content.html  footer.html  header.html  laskutus.html
backend/registration/: authentication.py  forms.py  tokens.py  urls.py  utils.py  views.py
backend/registration/templates/registration/: AccountCreationFailed.html  ActivationSuccess.html  completeProfile.html  createAccount.html  dashboard.html  forgotPwd.html  invalidLink.html  login.html  loginpage.html  (+7 more)
backend/templates/: base.html  homepage.html
(+66 files in other folders)
