[project]
name = "gig-work-invoicing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.4",
    "docx>=0.2.4",
    "docx2pdf>=0.1.8",
    "docxtpl>=0.20.2",
    "mariadb>=1.1.14",
    "mysql-connector-python>=9.6.0",
    "mysqlclient>=2.2.8",
    "pymysql>=1.1.2",
    "sqlalchemy>=2.0.49",
]
