[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosmtpd>=1.4.6",
    "django>=6.0.3",
    "djangorestframework>=3.17.0",
    "dotenv>=0.9.9",
    "email-validator>=2.3.0",
    "pymysql>=1.1.2",
]
